PROYECTO01 PC - EJB>> 24/02/2014

--- a/DesignerRHN/DesignerRHN-war/web/ubicaciongeografica.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/ubicaciongeografica.xhtml
@@ -180,7 +180,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 100%; height: 16px; font-size: 9px; border: none; color: blue" id="fooSucursalPila"  action="cambioTipoCentroCosto" value="Sucursal"/>
+                                        <p:commandButton style="width: 100%; height: 16px; font-size: 9px; border: none; color: blue" id="fooSucursalPila"  action="cambioSucursalPila" value="Sucursal"/>
                                     </f:facet>
                                 </p:column>
 
