--- a/DesignerRHN/DesignerRHN-war/web/dependenciaoperando.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/dependenciaoperando.xhtml
@@ -130,7 +130,7 @@
                             </p:toolbarGroup>
                         </p:toolbar>
                         <p:commandButton style="position: absolute; left: 700px; top: 470px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-check" id="ACEPTAR" disabled="#{controlDependenciaOperando.cambiosPagina}" value="#{msg['aceptar']}" onclick="confirmarGuardar.show();" update=":form:datosDependenciasOperandos" process="@this" />
-                        <p:commandButton style="position: absolute; left: 783px; top: 470px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-arrowreturnthick-1-w" id="ATRAS" value="#{msg['atras']}" actionListener="#{controlDependenciaOperando.salir()}" action="operando" process="@this" />
+                        <p:commandButton style="position: absolute; left: 783px; top: 470px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-arrowreturnthick-1-w" id="ATRAS" value="#{msg['atras']}" actionListener="#{controlDependenciaOperando.salir()}" action="tipobloque" process="@this" />
 
                     </p:panel>
                 </h:form>
