--- a/DesignerRHN/DesignerRHN-war/web/tipoconclusion.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/tipoconclusion.xhtml
@@ -11,9 +11,9 @@
         <ui:composition template="/Template.xhtml">
             <ui:define name="body">                  
                 <h:form id="form"> 
-                    <p:panel  id="PanelTotal" header="Tipos de Conclusión" style=" font-size: 12px; position: absolute; width: 874px; height: 530px; left: 300px; top: 100px;text-align: left" >  
+                    <p:panel  id="PanelTotal" header="Tipo Conclusión" style=" font-size: 12px; position: absolute; width: 874px; height: 530px; left: 300px; top: 100px;text-align: left" >  
                         <fieldset style="position: absolute; left: 10px; top: 90px; font-size: 10px; width: 835px; height: 375px; border-radius: 10px; ">
-                            <legend style="font-size: 14px; color: blue"><strong>Conclusión</strong></legend>
+                            <legend style="font-size: 14px; color: blue"><strong>Conclusiones</strong></legend>
 
                             <p:dataTable id="datosTiposConclusiones" var="info" rowKey="#{info.secuencia}"  rowIndexVar="indice" style="width: 810px ;font-size: 10px; border: 1px;"                           
                                          value="#{controlTiposConclusiones.listTiposConclusiones}" scrollable="true" scrollHeight="#{controlTiposConclusiones.tamano}"  scrollWidth="830"
@@ -32,10 +32,6 @@
                                             </p:inputText>
                                         </f:facet>  
                                     </p:cellEditor>
-                                    <f:facet name="footer">
-                                        <h:outputText value="Código"/>
-                                    </f:facet>
-
                                 </p:column>
                                 <p:column headerText="Descripcion" sortBy="#{info.descripcion}" filterBy="#{info.descripcion}" filterMatchMode="contains" id="descripcion" width="155" filterStyle="display: none; visibility: hidden;" >                                  
                                     <p:cellEditor>  
@@ -47,9 +43,6 @@
                                             </p:inputText>
                                         </f:facet>  
                                     </p:cellEditor>
-                                    <f:facet name="footer">
-                                        <h:outputText value="Descripcion"/>
-                                    </f:facet>
                                 </p:column>
                             </p:dataTable>
 
@@ -87,13 +80,13 @@
 
                                 <p:separator /> 
                                 <p:commandButton id="insertar" value="" style="background-image: url(Imagenes/nuevoRegistro.jpg);  background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px "  oncomplete="nuevoRegistroTiposConclusiones.show()" update=":formularioDialogos:nuevaTipoempresa" process="@this"/> 
-                                <p:tooltip style="font-size: 12px" for="insertar" value="Nuevo Tipo Conclusion " />
+                                <p:tooltip style="font-size: 12px" for="insertar" value="Nuevo Conclusion" />
 
                                 <p:commandButton id="eliminar" value="" style="background-image: url(Imagenes/delete.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px "  actionListener="#{controlTiposConclusiones.verificarBorrado()}" process="@this"/>  
-                                <p:tooltip style="font-size: 12px" for="eliminar" value="Eliminar Tipo Conclusion " />
+                                <p:tooltip style="font-size: 12px" for="eliminar" value="Eliminar Conclusion" />
 
                                 <p:commandButton id="duplicar" value="" style="background-image: url(Imagenes/duplicar.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px " actionListener="#{controlTiposConclusiones.duplicandoTiposConclusiones()}" process="@this"/>  
-                                <p:tooltip style="font-size: 12px" for="duplicar" value="Duplicar Tipo Conclusion " />
+                                <p:tooltip style="font-size: 12px" for="duplicar" value="Duplicar Conclusion" />
                                 <p:separator /> 
                                 <p:commandButton id="rastro" value="" style="background-image: url(Imagenes/rastro.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px " actionListener="#{controlTiposConclusiones.verificarRastro()}" process="@this"/>  
                                 <p:tooltip style="font-size: 12px" for="rastro" value="Rastro"/>
@@ -107,7 +100,7 @@
 
                         <p:dialog header="ATENCIÓN...!" widgetVar="confirmarGuardar" draggable="false" resizable="false" closable="false" id="confirmarGuardar"  
                                   showEffect="fade" hideEffect="fade" width="400" height="110" modal="true" style="font-size: 11px;">
-                            <h:graphicImage value="Imagenes/alerta.jpg" width="70" height="50" style="position: absolute; left: 30px; top: 10px;"  />
+                            <h:graphicImage value="Imagenes/alerta.jpg" width="60" height="70" style="position: absolute; left: 30px; top: 10px;"  />
                             <h:outputText value="¿Desea guardar los cambios realizados?" style="position: absolute; left: 100px; top: 20px; width: 300px; font-weight:bold" />
                             <p:commandButton value="Si" onclick="confirmarGuardar.hide();" actionListener="#{controlTiposConclusiones.guardarTiposConclusiones()}" style="position: absolute; top: 60px; left: 215px " process="@this" />
                             <p:commandButton value="No" onclick="confirmarGuardar.hide();" style="position: absolute; top: 60px; left: 255px" process="@this" />
@@ -133,14 +126,14 @@
                         <p:commandButton value="Aceptar" onclick="validacionBorrar.hide();" style="position: absolute; top: 60px; left: 300px" process="@this" />
                     </p:dialog>
                     <p:dialog id="mostrarBorrados" header="ATENCIÓN...!" widgetVar="mostrarBorrados"  resizable="false" draggable="false" modal="true" height="95" width="350px" style="font-size: 12px" closable="false">  
-                        <h:graphicImage value="Imagenes/alerta.jpg" width="50" height="70" style="position: absolute; left: 40px; top: 10px;"  />
+                        <h:graphicImage value="Imagenes/alerta.jpg" width="50" height="70" style="position: absolute; left: 20px; top: 10px;"  />
                         <h:outputText value="Se han borrado #{controlTiposConclusiones.registrosBorrados}  Registros" style="position: absolute; left: 100px; top: 20px; width: 250px; font-weight:bold" />
                         <p:commandButton value="Aceptar" onclick="mostrarBorrados.hide();" style="position: absolute; top: 60px; left: 200px" process="@this" />
                     </p:dialog>
                     <p:dialog id="mostrarGuardar" header="ATENCIÓN...!" widgetVar="mostrarGuardar"  resizable="false" draggable="false" modal="true" height="95" width="350px" style="font-size: 12px" closable="false">  
-                        <h:graphicImage value="Imagenes/alerta.jpg" width="50" height="70" style="position: absolute; left: 40px; top: 10px;"  />
+                        <h:graphicImage value="Imagenes/alerta.jpg" width="70" height="70" style="position: absolute; left: 20px; top: 10px;"  />
                         <h:outputText value="Se ha guardado correctamente los cambios" style="position: absolute; left: 100px; top: 20px; width: 250px; font-weight:bold" />
-                        <p:commandButton value="Aceptar" onclick="mostrarGuardar.hide();" style="position: absolute; top: 60px; left: 200px" process="@this" />
+                        <p:commandButton value="Aceptar" onclick="mostrarGuardar.hide();" style="position: absolute; top: 60px; left: 240px" process="@this" />
                     </p:dialog>
                     <p:dialog id="validacionNuevaCentroCosto" header="ATENCIÓN...!" widgetVar="validacionNuevaCentroCosto"  resizable="false" draggable="false" modal="true" height="95" width="450px" style="font-size: 12px" closable="false">  
                         <h:graphicImage value="Imagenes/alerta.jpg" width="70" height="50" style="position: absolute; left: 30px; top: 10px;"  />
@@ -202,7 +195,7 @@
 
                     <p:dialog id="editCodigo" header="Editar Código" widgetVar="editCodigo" resizable="false" draggable="false" modal="true" height="93" width="240" style="font-size: 12px;text-transform: uppercase">  
                         <p:inputTextarea value="#{controlTiposConclusiones.editarTiposConclusiones.codigo}" style="overflow: auto; width: 200px; height: 40px" readonly="true"/>
-                        <p:commandButton id="cancelarCodigo" value="Atras" onclick="editCodigo.hide();" style="position: absolute; top: 60px; left: 148px; font-size: 11px" process="@this"/>
+                        <p:commandButton id="cancelarCodigo" value="Atras" onclick="editCodigo.hide();" style="position: absolute; top: 60px; left: 165px; font-size: 11px" process="@this"/>
                     </p:dialog>
                     <p:dialog id="editDescripcion" header="Editar Descripcion" widgetVar="editDescripcion" resizable="false" draggable="false" modal="true" height="93" width="240" style="font-size: 12px;text-transform: uppercase">  
                         <p:inputTextarea value="#{controlTiposConclusiones.editarTiposConclusiones.descripcion}" style="overflow: auto; width: 200px; height: 40px" readonly="true"/>
@@ -211,48 +204,48 @@
 
 
 
-                    <p:dialog id="nuevoRegistroTiposConclusiones" header="Nuevo Registro" widgetVar="nuevoRegistroTiposConclusiones" closable="false" resizable="false"  draggable="false" modal="true" height="255" width="340" style="font-size: 12px; padding: 0px">  
-                        <center><strong><h:outputText id="informacion" value="Ingresar Nuevo Tipo Conclusion " style="font-size: 14px; color: blue; position: relative; top: 10px" /></strong></center> 
+                    <p:dialog id="nuevoRegistroTiposConclusiones" header="Nuevo Registro" widgetVar="nuevoRegistroTiposConclusiones" closable="false" resizable="false"  draggable="false" modal="true" height="200" width="340" style="font-size: 12px; padding: 0px">  
+                        <center><strong><h:outputText id="informacion" value="Ingresar Nueva Conclusion" style="font-size: 14px; color: blue; position: relative; top: 10px" /></strong></center> 
 
                         <p:panel id="nuevaTipoempresa" style="border: none;">
 
                             <strong><h:outputText value="Código: "  style="font-size: 12px; position: absolute; top: 60px;text-transform: uppercase" /></strong>
-                            <p:inputText id="nuevoCodigo" value="#{controlTiposConclusiones.nuevoTiposConclusiones.codigo}" style="font-size: 12px; width: 102px; position: absolute; left: 150px; top: 55px;">
+                            <p:inputText id="nuevoCodigo" value="#{controlTiposConclusiones.nuevoTiposConclusiones.codigo}" style="font-size: 12px; width: 135px; position: absolute; left: 180px; top: 55px;">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="nuevoCodigo" value="Código" />
 
                             <strong><h:outputText value="Descripcion "  style="font-size: 12px; position: absolute; top: 110px;text-transform: uppercase" /></strong>
-                            <p:inputText  id="nuevoNombre" value="#{controlTiposConclusiones.nuevoTiposConclusiones.descripcion}" style="font-size: 12px; width: 102px; position: absolute; left: 150px; top: 105px;text-transform: uppercase">
+                            <p:inputText  id="nuevoNombre" value="#{controlTiposConclusiones.nuevoTiposConclusiones.descripcion}" style="font-size: 12px; width: 135px; position: absolute; left: 180px; top: 105px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="nuevoNombre" value="Nombre" />
-                            <p:commandButton id="limpiar" value="Limpiar" style=" font-size: 11px ;position: absolute; left: 20px; top: 220px;"  actionListener="#{controlTiposConclusiones.limpiarNuevoTiposConclusiones()}" update="nuevaTipoempresa" process="@this"/>
-                            <p:commandButton id="agregarTE" value="Agregar" style="font-size: 11px; position: absolute; left: 180px; top: 220px;" actionListener="#{controlTiposConclusiones.agregarNuevoTiposConclusiones()}" process="@this" />
-                            <p:commandButton id="cancelarTE" value="Cancelar" style="font-size: 11px; position: absolute; left: 250px; top: 220px;"  update="nuevaTipoempresa" onclick="nuevoRegistroTiposConclusiones.hide();"  actionListener="#{controlTiposConclusiones.limpiarNuevoTiposConclusiones()}"  process="@this"/>
+                            <p:commandButton id="limpiar" value="Limpiar" style=" font-size: 11px ;position: absolute; left: 20px; top: 160px;"  actionListener="#{controlTiposConclusiones.limpiarNuevoTiposConclusiones()}" update="nuevaTipoempresa" process="@this"/>
+                            <p:commandButton id="agregarTE" value="Agregar" style="font-size: 11px; position: absolute; left: 180px; top: 160px;" actionListener="#{controlTiposConclusiones.agregarNuevoTiposConclusiones()}" process="@this" />
+                            <p:commandButton id="cancelarTE" value="Cancelar" style="font-size: 11px; position: absolute; left: 250px; top: 160px;"  update="nuevaTipoempresa" onclick="nuevoRegistroTiposConclusiones.hide();"  actionListener="#{controlTiposConclusiones.limpiarNuevoTiposConclusiones()}"  process="@this"/>
                         </p:panel>
                     </p:dialog>
 
 
 
-                    <p:dialog id="duplicarRegistroTiposConclusiones" header="duplicar Registro" widgetVar="duplicarRegistroTiposConclusiones" closable="false" resizable="false"  draggable="false" modal="true" height="255" width="340" style="font-size: 12px; padding: 0px">  
-                        <center><strong><h:outputText id="informacionDuplicar" value="Duplicar Tipo Conclusion " style="font-size: 14px; color: blue; position: relative; top: 10px" /></strong></center> 
+                    <p:dialog id="duplicarRegistroTiposConclusiones" header="duplicar Registro" widgetVar="duplicarRegistroTiposConclusiones" closable="false" resizable="false"  draggable="false" modal="true" height="200" width="340" style="font-size: 12px; padding: 0px">  
+                        <center><strong><h:outputText id="informacionDuplicar" value="Duplicar Conclusion" style="font-size: 14px; color: blue; position: relative; top: 10px" /></strong></center> 
 
                         <p:panel id="duplicarTE" style="border: none;">
                             <strong><h:outputText value="código "  style="font-size: 12px; position: absolute; top: 60px;text-transform: uppercase" /></strong>
-                            <p:inputText id="duplicarCodigo" value="#{controlTiposConclusiones.duplicarTiposConclusiones.codigo}" style="font-size: 12px; width: 102px; position: absolute; left: 150px; top: 55px;">
+                            <p:inputText id="duplicarCodigo" value="#{controlTiposConclusiones.duplicarTiposConclusiones.codigo}" style="font-size: 12px; width: 135px; position: absolute; left: 180px; top: 55px;">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="duplicarCodigo" value="Código" />
 
                             <strong><h:outputText value="Descripcion"  style="font-size: 12px; position: absolute; top: 110px;text-transform: uppercase" /></strong>
-                            <p:inputText id="duplicarNombre" value="#{controlTiposConclusiones.duplicarTiposConclusiones.descripcion}"  style="font-size: 12px; width: 102px; position: absolute; left: 150px; top: 105px;" >
+                            <p:inputText id="duplicarNombre" value="#{controlTiposConclusiones.duplicarTiposConclusiones.descripcion}"  style="font-size: 12px; width: 135px; position: absolute; left: 180px; top: 105px;" >
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="duplicarNombre" value="Descripcion" />
-                            <p:commandButton id="limpiarD" value="Limpiar" style=" font-size: 11px ;position: absolute; left: 20px; top: 220px;"  actionListener="#{controlTiposConclusiones.limpiarDuplicarTiposConclusiones() }" update="duplicarTE"  process="@this"/>
-                            <p:commandButton id="duplicarVFP" value="Agregar" style="font-size: 11px; position: absolute; left: 180px; top: 220px;" actionListener="#{controlTiposConclusiones.confirmarDuplicar()}"  process="@this" />
-                            <p:commandButton id="cancelarDuplicarVFP" value="Cancelar" style="font-size: 11px; position: absolute; left: 250px; top: 220px;"  update="duplicarTE" onclick="duplicarRegistroTiposConclusiones.hide();" actionListener="#{controlTiposConclusiones.limpiarDuplicarTiposConclusiones()}"  process="@this"/>
+                            <p:commandButton id="limpiarD" value="Limpiar" style=" font-size: 11px ;position: absolute; left: 20px; top: 160px;"  actionListener="#{controlTiposConclusiones.limpiarDuplicarTiposConclusiones() }" update="duplicarTE"  process="@this"/>
+                            <p:commandButton id="duplicarVFP" value="Agregar" style="font-size: 11px; position: absolute; left: 180px; top: 160px;" actionListener="#{controlTiposConclusiones.confirmarDuplicar()}"  process="@this" />
+                            <p:commandButton id="cancelarDuplicarVFP" value="Cancelar" style="font-size: 11px; position: absolute; left: 250px; top: 160px;"  update="duplicarTE" onclick="duplicarRegistroTiposConclusiones.hide();" actionListener="#{controlTiposConclusiones.limpiarDuplicarTiposConclusiones()}"  process="@this"/>
                         </p:panel>
                     </p:dialog>
                 </h:form>
